<resources>
    <string name="app_name">MakeAMeal</string>
    <string name="welcome_login_screen">Welcome!</string>
    <string name="user_label">User</string>
    <string name="type_in_username">Type in username</string>
    <string name="log_in_btn">Log in</string>
    <string name="name_of_cook">Name of cook</string>
    <string name="price">0.00</string>
    <string name="lorem_ipsum_dolor">lorem ipsum dolor</string>
    <string name="mealname_label">mealname</string>
    <string name="alleen_veganistisch">Veganistisch</string>
    <string name="alleen_vegetarisch">Vegetarisch</string>
    <string name="filter_op">Filter op:</string>
    <string name="verwijder_filter">Verwijder filter</string>
    <string name="meal_starting_picture">Meal_starting_picture</string>
</resources>